edit warehouse disallocate
