# backend_srv/internals/api/server.go
@@ -108,6 +108,7 @@ func (s *Server) warehouseRoutes() {
 	s.route.GET("/api/v1/warehouse/:location_code", s.GetLocationByLocationCode)
 	s.route.POST("/api/v1/warehouse/create-draft-transfer", s.CreateDraftWarehouseTransfer)
 	s.route.POST("/api/v1/warehouse/input-item/:transaction_number", s.InputItemWarehouseTransfer)
+	s.route.POST("/api/v1/warehouse/disallocate-item/:transaction_number", s.DisallocateItemWarehouseTransfer)
 	s.route.PUT("/api/v1/warehouse/set-status/:transaction_number/:status", s.SetStatusTransaction)
 }
 
